# Spectra

./: .gitignore  CLAUDE.md  LICENSE  PRD.md  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/commands/: projspec.analyze.md  projspec.checklist.md  projspec.checkpoint.md  projspec.clarify.md  projspec.constitution.md  projspec.implement.md  projspec.init.md  projspec.learn.md  projspec.new.md  projspec.plan.md  projspec.review-pr.md  projspec.spec.md  projspec.specify.md  projspec.status.md  projspec.tasks.md  projspec.validate.md  speckit.checkpoint.md  speckit.clarify.md  speckit.implement.md
.claude/plugins/: projspec
.github/workflows/: release.yml
.projspec/: config.yaml  workflow.yaml
.projspec/memory/: constitution.md
.projspec/phases/: implement.md  plan.md  review.md  tasks.md
.specify/learning/: .current-session-dir  .current-session-id
.specify/memory/: constitution.md  context.md
.specify/sessions/: 2026-01-26-0025918d-session.md  2026-01-26-0e558792-session.md  2026-01-26-11d995f4-session.md  2026-01-26-1bcf879b-session.md  2026-01-26-1e30da31-session.md  2026-01-26-2ee6fef2-session.md  2026-01-26-314a62f9-session.md  2026-01-26-3ba8ba8b-session.md  2026-01-26-41fc630c-session.md  2026-01-26-73f3c042-session.md  2026-01-26-755e374b-session.md  2026-01-26-82382cca-session.md  2026-01-26-89e593a2-session.md  2026-01-26-921fd1fc-session.md  2026-01-26-925a2a79-session.md  2026-01-26-b2745c19-session.md  2026-01-26-c5d2f278-session.md  2026-01-26-c5d7e99c-session.md  2026-01-26-ce4f95f8-session.md  2026-01-26-dd6ad1a2-session.md  2026-01-26-e1f1a3c4-session.md  2026-01-26-e9db75b8-session.md  2026-01-26-f00f9960-session.md  2026-01-27-514ed209-session.md  compaction-log.md
.specify/templates/: plan-template.md  spec-template.md
.spectra/memory/: constitution.md
logs/unknown/: pre_tool_use.json
projspec/: README.md  TESTING.md  VERIFICATION.md
projspec/.claude-plugin/: marketplace.json
scripts/: archive-feature.sh  check-prerequisites.sh  common.sh  create-new-feature.sh  setup-plan.sh  update-agent-context.sh
speckit/: README.md  TESTING.md  VERIFICATION.md
speckit/.claude-plugin/: marketplace.json  plugin.json
speckit/agents/: code-simplifier.md
speckit/commands/: analyze.md  clarify.md  implement.md  issues.md  plan.md  specify.md  tasks.md
speckit/hooks/: hooks.json
speckit/scripts/: analyze-pending.sh  check-prerequisites.sh  create-new-feature.sh  evaluate-session.sh  session-start.sh  setup-hooks.sh
speckit/templates/: plan-template.md  spec-template.md  tasks-template.md
specs/001-projspec-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-projspec-claude-code/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-claude-plugin-speckit/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-rename-speckit-projspec/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-add-e2e-tests/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-worktree-workflow/: data-model.md  plan.md  quickstart.md  (+3 more)
spectra/: README.md
templates/: agent-file-template.md  checklist-template.md  constitution-template.md  spec-template.md
tests/: __init__.py  conftest.py
(+335 files in other folders)
